ags (3.3.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing includes
	* improved ags_functional_osc_server_test.c to run non-blocking OSC client

ags (3.3.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed infinite loop in ags/X/ags_line_member_editor_callbacks.c
	* fixed pointer corruption because of wrong cast to get stream mutex

ags (3.3.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential dead-lock related to ags-fx-ladspa and ags-fx-lv2
	* fixed missing return value of ags_fx_factory_create()
	* fixed reverse mapping of DSSI and LV2 plugins

ags (3.3.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing call to ags_fx_lv2_channel_load_plugin() in ags_fx_factory.c
	* fixed restore from AgsSimpleFile
	* fixed g_list_free_full() while transfer none
	* minor bug-fixes

ags (3.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented staging program of AgsAudioLoop, AgsAudioThread and AgsChannelThread
	* implemented ags_fx_factory.[ch]
	* implemented AgsFxPlaybackAudio, AgsFxPlaybackAudioProcessor, AgsFxPlaybackChannel,
	  AgsFxPlaybackChannelProcessor, AgsFxPlaybackRecycling and AgsFxPlaybackAudioSignal
	* implemented AgsFxBufferAudio, AgsFxBufferAudioProcessor, AgsFxBufferChannel,
	  AgsFxBufferChannelProcessor, AgsFxBufferRecycling and AgsFxBufferAudioSignal
	* implemented AgsFxNotationAudio, AgsFxNotationAudioProcessor, AgsFxNotationChannel,
	  AgsFxNotationChannelProcessor, AgsFxNotationRecycling and AgsFxNotationAudioSignal
	* implemented AgsFxPatternAudio, AgsFxPatternAudioProcessor, AgsFxPatternChannel,
	  AgsFxPatternChannelProcessor, AgsFxPatternRecycling and AgsFxPatternAudioSignal
	* implemented AgsFxLadspaAudio, AgsFxLadspaAudioProcessor, AgsFxLadspaChannel,
	  AgsFxLadspaChannelProcessor, AgsFxLadspaRecycling and AgsFxLadspaAudioSignal
	* implemented AgsFxDssiAudio, AgsFxDssiAudioProcessor, AgsFxDssiChannel,