@@ -35,12 +35,19 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.3.4" date="2020-05-21">
+      <description>
+	<p>Fixed MIDI playback.</p>
+	<p>Fixed AgsSyncsynth and AgsFmSyncsynth playback.</p>
+      </description>
+    </release>
+
     <release version="3.3.3" date="2020-05-19">
       <description>
 	<p>Fixed infinite loop while removing AgsLineMember from AgsEffectLine.</p>
       </description>
     </release>
-
+    
     <release version="3.3.2" date="2020-05-19">
       <description>
 	<p>Fixed potential dead-lock.</p>
